--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 !types.d.ts
-/test
+/test-dir
 
 # dependencies
 /node_modules
