--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "masternode",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Node JS & Javascript functionalities",
   "main": "app",
+  "type": "module",
   "scripts": {
     "test": "ashis"
   },
