--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "masternode",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Node JS & Javascript functionalities",
-  "main": "app",
+  "main": "index.js",
   "scripts": {
     "test": "ashis"
   },
