--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masternode",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "Node JS & Javascript functionalities",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "date-and-time": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {}
