--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masternode",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "description": "Node JS & Javascript functionalities",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "crypto": "^1.0.1",
     "date-and-time": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.6.5",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {}
