--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masternode",
-  "version": "3.3.6",
+  "version": "3.3.7",
   "description": "Node JS & Javascript functionalities",
   "main": "index.js",
   "scripts": {
@@ -22,12 +22,12 @@
     "url": "https://github.com/ashisdeveloper/masternode/issues"
   },
   "homepage": "https://github.com/ashisdeveloper/masternode#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "crypto": "^1.0.1",
-    "date-and-time": "^2.0.0",
+    "date-and-time": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.6.5",
+    "nodemailer": "^6.7.0",
     "serverless-mysql": "^1.5.4"
-  },
-  "devDependencies": {}
+  }
 }
